--- a/popup.html
+++ b/popup.html
@@ -1,2 +1,32 @@
-<script src="domain_list.js"></script>
-<script src="popup.js"></script>
+<!doctype html>
+<!--
+ This page is shown when the extension button is clicked, because the
+ "browser_action" field in manifest.json contains the "default_popup" key with
+ value "popup.html".
+ -->
+<html>
+  <head>
+    <title>Easy Cookies</title>
+
+    <!--
+      - JavaScript and HTML must be in separate files: see our Content Security
+      - Policy documentation[1] for details and explanation.
+      -
+      - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
+     -->
+    <script src="domain_list.js"></script>
+    <script src="popup.js"></script>
+    <style>
+      div#content {
+        width:800px;
+        height:800px;
+        overflow-y: scroll;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="content"></div>
+  </body>
+</html>
+
+
